public interface IOption {
    String onAccept (Player p);
    String onReject (Player p);


}
